# server/routes/api/index.js
@@ -84,8 +84,7 @@ apirouter.get('/template/:skill_id', templateController.getTemplateBySkillId);
 apirouter.get('/scenario', function(req, res){res.redirect('/api/scenario/sample')});
 apirouter.get('/scenario/:task_id', templateController.getScenarioByTaskId);
 
-apirouter.get('/mapper', function(req, res){res.redirect('/api/mapper/sample')});
-apirouter.get('/mapper/:template_id', templateController.getMapperByTemplatelId);
+apirouter.get('/template/:template_id/mapper', templateController.getMapperByTemplatelId);
 
 apirouter.get('/script', function(req, res){res.redirect('/api/script/sample')});
 apirouter.get('/script/:task_id', templateController.getScriptByTaskId);
